--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <div id="ranked-choice"></div>
+        <div id="ranked-choice-root"></div>
         <script src="http://fb.me/react-0.8.0.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="js/ranked_choice.js" type="text/javascript"></script>
