added merriweather font

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,300,400italic,300italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='css/main.css' rel='stylesheet' type='text/css'>
+    </head>
     <body>
         <div id="ranked-choice-root"></div>
         <script src="http://fb.me/react-0.8.0.js"></script>
